--- a/externals/cm.gausscloud~.mxo/Contents/Info.plist
+++ b/externals/cm.gausscloud~.mxo/Contents/Info.plist
@@ -3,44 +3,53 @@
 <plist version="1.0">
 <dict>
 	<key>BuildMachineOSBuild</key>
-	<string>16G2128</string>
+	<string>20G624</string>
+	<key>C74ObjectProperties</key>
+	<dict>
+		<key>c74excludefromcollectives</key>
+		<string></string>
+	</dict>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>English</string>
 	<key>CFBundleExecutable</key>
 	<string>cm.gausscloud~</string>
 	<key>CFBundleIdentifier</key>
-	<string>com.cycling74.cm-gausscloud-</string>
+	<string>.</string>
 	<key>CFBundleInfoDictionaryVersion</key>
-	<string>7.0.1</string>
+	<string>6.0</string>
 	<key>CFBundleLongVersionString</key>
-	<string>cm.gausscloud~ 7.0.1, Copyright 2014 Cycling '74</string>
+	<string>cm.gausscloud~  - </string>
 	<key>CFBundlePackageType</key>
 	<string>iLaX</string>
-	<key>CFBundleShortVersionString</key>
-	<string>7.0.1</string>
 	<key>CFBundleSignature</key>
 	<string>max2</string>
 	<key>CFBundleSupportedPlatforms</key>
 	<array>
 		<string>MacOSX</string>
 	</array>
-	<key>CFBundleVersion</key>
-	<string>7.0.1</string>
 	<key>CSResourcesFileMapped</key>
 	<true/>
 	<key>DTCompiler</key>
 	<string>com.apple.compilers.llvm.clang.1_0</string>
 	<key>DTPlatformBuild</key>
-	<string>8A218a</string>
+	<string>13C100</string>
+	<key>DTPlatformName</key>
+	<string>macosx</string>
 	<key>DTPlatformVersion</key>
-	<string>GM</string>
+	<string>12.1</string>
 	<key>DTSDKBuild</key>
-	<string>16A300</string>
+	<string>21C46</string>
 	<key>DTSDKName</key>
-	<string>macosx10.12</string>
+	<string>macosx12.1</string>
 	<key>DTXcode</key>
-	<string>0800</string>
+	<string>1321</string>
 	<key>DTXcodeBuild</key>
-	<string>8A218a</string>
+	<string>13C100</string>
+	<key>LSMinimumSystemVersion</key>
+	<string>10.11</string>
+	<key>LSRequiresCarbon</key>
+	<true/>
+	<key>NSHumanReadableCopyright</key>
+	<string></string>
 </dict>
 </plist>
