--- a/externals/gvf.mxo/Contents/Info.plist
+++ b/externals/gvf.mxo/Contents/Info.plist
@@ -3,7 +3,7 @@
 <plist version="1.0">
 <dict>
 	<key>BuildMachineOSBuild</key>
-	<string>15A284</string>
+	<string>24E263</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>English</string>
 	<key>CFBundleExecutable</key>
@@ -31,18 +31,22 @@
 	<key>DTCompiler</key>
 	<string>com.apple.compilers.llvm.clang.1_0</string>
 	<key>DTPlatformBuild</key>
-	<string>7C68</string>
+	<string>24E241</string>
+	<key>DTPlatformName</key>
+	<string>macosx</string>
 	<key>DTPlatformVersion</key>
-	<string>GM</string>
+	<string>15.4</string>
 	<key>DTSDKBuild</key>
-	<string>15C43</string>
+	<string>24E241</string>
 	<key>DTSDKName</key>
-	<string>macosx10.11</string>
+	<string>macosx15.4</string>
 	<key>DTXcode</key>
-	<string>0720</string>
+	<string>1630</string>
 	<key>DTXcodeBuild</key>
-	<string>7C68</string>
+	<string>16E140</string>
 	<key>LSApplicationCategoryType</key>
 	<string></string>
+	<key>LSMinimumSystemVersion</key>
+	<string>12.4</string>
 </dict>
 </plist>
