--- a/externals/rapidmax.mxo/Contents/Info.plist
+++ b/externals/rapidmax.mxo/Contents/Info.plist
@@ -3,7 +3,7 @@
 <plist version="1.0">
 <dict>
 	<key>BuildMachineOSBuild</key>
-	<string>16G1036</string>
+	<string>24E263</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>English</string>
 	<key>CFBundleExecutable</key>
@@ -31,16 +31,20 @@
 	<key>DTCompiler</key>
 	<string>com.apple.compilers.llvm.clang.1_0</string>
 	<key>DTPlatformBuild</key>
-	<string>9B55</string>
+	<string>24E241</string>
+	<key>DTPlatformName</key>
+	<string>macosx</string>
 	<key>DTPlatformVersion</key>
-	<string>GM</string>
+	<string>15.4</string>
 	<key>DTSDKBuild</key>
-	<string>17B41</string>
+	<string>24E241</string>
 	<key>DTSDKName</key>
-	<string>macosx10.13</string>
+	<string>macosx15.4</string>
 	<key>DTXcode</key>
-	<string>0910</string>
+	<string>1630</string>
 	<key>DTXcodeBuild</key>
-	<string>9B55</string>
+	<string>16E140</string>
+	<key>LSMinimumSystemVersion</key>
+	<string>10.7</string>
 </dict>
 </plist>
